samples/_failures_safe/1761516312_113cea_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f9a526c1.c:189:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  189 | void freeGraph
      | ^~~~
